--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<main class="container mx-auto p-4">
-  <h1>Bienvenido!</h1>
-</main>
+<div class="grid-container">
+  <!-- pase las cards desde HomeComponent a GridComponent -->
+  <app-grid [cards]="cards"></app-grid>
+</div>
+
+<button class="next-button" (click)="nextPage()">Next</button>
