--- a/src/app/components/placeprod-cards/placeprod-cards.component.html
+++ b/src/app/components/placeprod-cards/placeprod-cards.component.html
@@ -1,3 +1,5 @@
 <div class="card">
-  <img [src]="cardData[0].imageUrl" [alt]="'Cat Image ' + cardData[0].id" />
+  <img [src]="cardData.imageUrl" [alt]="'Cat Image ' + cardData.id" />
 </div>
+
+
