Añadir página de inicio de sesión

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header> <!-- Navbar -->
 
-<app-home></app-home>
+<app-login-page></app-login-page>
 
 <!--<router-outlet></router-outlet>-->
