--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,4 @@
-<div class="grid-container">
-  <!-- pase las cards desde HomeComponent a GridComponent -->
-  <app-grid [cards]="cards"></app-grid>
-</div>
+<!-- pase las cards desde HomeComponent a GridComponent -->
+<app-grid></app-grid>
 
-<button class="next-button" (click)="nextPage()">Next</button>
+<button class="next-button" (click)="nextPage()">Next</button> <!-- no se ve el boton lpm -->
