--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  
 
   img {
     height: 32px;
@@ -16,13 +17,17 @@
 .header > app-search-bar {
   min-width: 30em;
 }
-
 .header {
-  background-color: rgb(154, 180, 228);
+  background-color: rgb(2, 62, 138);
   border-bottom: 1px solid #e5e7eb;
   padding: 1rem;
-  position: sticky;
+  position: fixed; /* Se mantiene fija en la pantalla */
+  top: 0; /* Se ancla en la parte superior */
+  left: 0;
+  width: calc(100% - 1rem); /* Ocupar todo el ancho */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1000;
+  
 }
