--- a/src/app/components/placeprod-cards/placeprod-cards.component.css
+++ b/src/app/components/placeprod-cards/placeprod-cards.component.css
@@ -1,6 +1,16 @@
 .card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-  }
-  
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* Estilos para las tarjetas */
+.card {
+  display: inline-block;
+  position: relative;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
