--- a/src/app/components/search-bar/search-bar.component.css
+++ b/src/app/components/search-bar/search-bar.component.css
@@ -1,5 +1,6 @@
 .search-bar {
     max-width: 400px;
+    
     margin: auto;
   
     .search-container {
@@ -34,14 +35,15 @@
         position: absolute;
         right: 8px;
         padding: 6px 12px;
-        background-color: #2563eb;
+        background-color: #59d2fe;
         color: white;
         border: none;
         border-radius: 6px;
         cursor: pointer;
         
         &:hover {
-          background-color: #1e40af;
+          background-color: rgb(2, 62, 138);
+          transition: background-color 0.3s;
         }
       }
     }
