--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,6 +4,7 @@
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); 
     gap: 10px; 
     padding: 20px;
+  
   }
   
   
@@ -13,15 +14,16 @@
     margin: 20px auto;
     padding: 10px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #59d2fe;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
-  }
-  
-  .next-button:hover {
-    background-color: #0056b3;
+
+    &:hover {
+      background-color: rgb(2, 62, 138);
+      transition: background-color 0.3s;
+    }
   }
   
