Añadir páginas de perfil y registro, y actualizar la navegación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header> <!-- Navbar -->
 
-<app-login-page></app-login-page>
+<app-profile-page></app-profile-page>
 
 <!--<router-outlet></router-outlet>-->
