Añadir página de producto con funcionalidad de comentarios y calificaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header> <!-- Navbar -->
 
-<app-profile-page></app-profile-page>
+<app-place-product-page></app-place-product-page>
 
 <!--<router-outlet></router-outlet>-->
